--- a/.github/workflows/CI.CDPipeline.yml
+++ b/.github/workflows/CI.CDPipeline.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'  # Specify the Java distribution (e.g., 'temurin', 'zulu', 'adopt')
           java-version: '17'
 
       - name: Build with Maven
@@ -41,6 +42,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'  # Specify the Java distribution
           java-version: '17'
 
       - name: Run unit tests
