--- a/.github/workflows/CI.CDPipeline.yml
+++ b/.github/workflows/CI.CDPipeline.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'  # Specify the Java distribution (e.g., 'temurin', 'zulu', 'adopt')
+          distribution: 'temurin'
           java-version: '17'
 
       - name: Build with Maven
@@ -42,7 +42,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'  # Specify the Java distribution
+          distribution: 'temurin'
           java-version: '17'
 
       - name: Run unit tests
@@ -77,3 +77,4 @@ jobs:
           fields: repo,message,commit,author,action,eventName,ref,workflow,job,took
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
