--- a/.github/workflows/CI.CDPipeline.yml
+++ b/.github/workflows/CI.CDPipeline.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Python CI/CD Pipeline
 
 on:
   push:
@@ -11,64 +11,68 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Updated to the latest version
+        uses: actions/checkout@v3  # Check out the code from the repository
 
-      - name: Set up Java
-        uses: actions/setup-java@v3  # This action should be compatible with Node.js 16 and 20
+      - name: Set up Python
+        uses: actions/setup-python@v4  # Set up the Python environment
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          python-version: '3.9'  # Specify the Python version
 
-      - name: Build with Maven
-        run: mvn clean install
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt  # Install dependencies from requirements.txt
 
       - name: Archive Artifacts
-        uses: actions/upload-artifact@v3  # Update this action if you are using it
+        uses: actions/upload-artifact@v3  # Save the dependencies as artifacts
         with:
-          name: build-artifacts
-          path: target/*.jar
+          name: dependencies
+          path: ./venv
 
   test:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Updated to the latest version
+        uses: actions/checkout@v3  # Check out the code from the repository
 
-      - name: Set up Java
-        uses: actions/setup-java@v3  # Updated to the latest version
+      - name: Set up Python
+        uses: actions/setup-python@v4  # Set up the Python environment
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          python-version: '3.9'
 
-      - name: Run unit tests
-        run: mvn test
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-      - name: Run code coverage
-        run: mvn jacoco:report
+      - name: Run Unit Tests
+        run: python -m unittest discover  # Run unit tests with unittest
 
-      - name: Code quality analysis
-        run: mvn spotbugs:check
+      - name: Code Quality Analysis
+        run: |
+          flake8 .  # Run flake8 for code quality checks
+          pytest --cov  # Run pytest for code coverage
 
   deploy:
     runs-on: ubuntu-latest
     needs: test
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Updated to the latest version
+        uses: actions/checkout@v3  # Check out the code from the repository
 
       - name: Deploy to staging
-        run: echo "Deploying to staging environment"
-        env:
-          STAGING_ENVIRONMENT_URL: ${{ secrets.STAGING_ENVIRONMENT_URL }}
+        run: |
+          echo "Deploying to staging environment"
+          # Replace this with your actual deployment commands, e.g., uploading to a server
 
   notify:
     runs-on: ubuntu-latest
-    if: failure()
+    if: failure()  # Trigger this job only if the build or deploy fails
+
     steps:
       - name: Send Slack Notification
         uses: 8398a7/action-slack@v3
